Bug 7663: MDLIC - Arrow is not aligned properly on collapsed menu

--- a/src/shared/components/tooltip/tooltip.scss
+++ b/src/shared/components/tooltip/tooltip.scss
@@ -10,8 +10,8 @@
     &:after {
       content: " ";
       position: absolute;
-      top: -0.26rem;
-      left: 0;
+      top: -0.10rem;
+      left: -0.26rem;
       transform: rotate(45deg);
       width: 0.5rem;
       height: 0.5rem;
